# paper_review

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  TODO.md  docker-compose.yml  main.txt  multi-turn.txt  pyproject.toml  requirements.txt  response.txt  test.json
docs/: chatgpt-json-prompt.md  folders-and-tags.md
docs/personas/: hikari.md  rei.md  tsugumi.md
scripts/: get_google_refresh_token.py
sql/: 0001_init.sql
src/paper_review/: analysis_output.py  api.py  cli.py  db.py  discord_service.py  drive.py  migrations.py  models.py  openai_http.py  prompting.py  render.py  schemas.py  semantic_scholar.py  services.py  settings.py  translation.py  utils.py  worker.py  worker_service.py
src/paper_review/discord/: __init__.py  bot.py  debate.py  library.py  personas.py  webhook.py
src/paper_review/embeddings/: __init__.py  factory.py  providers.py  store.py
src/paper_review/llm/: __init__.py  factory.py  providers.py
src/paper_review/local_ai/: __init__.py  embeddings.py  llm.py  vector_search.py
src/paper_review/recommender/: __init__.py  pipeline.py  query.py  seed.py  server_client.py  task_runner.py
src/paper_review/webapp/: index.html
src/paper_review/webapp/static/: app.js  styles.css
tests/: test_local_ai_semantic_scholar_retrieval.py
